--- a/hallo.html
+++ b/hallo.html
@@ -19,7 +19,7 @@
 	</style>
 	<div id="edit">
 		<h1>Some awesome header here</h1>
-		<p>Some text here. How nice</p>
+		<p>Something extremely experimental!</p>
 	</div>
 
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
